--- a/index.html
+++ b/index.html
@@ -5,27 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <style>
-       body {
-        background-image: url('imagens/wallpaper002.jpg');
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-
-       }
-    </style>
 </head>    
 <body>
-    <div class="navigation">
-        <h1>NAVIGATION</h1>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Produto</a></li>
-            <li><a href="#">Serviço</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </div>
+    <ul class="list">
+        <li><a href="#" class="link active">Home</a></li>
+        <li><a href="#" class="link">Sobre</a></li>
+        <li><a href="#" class="link">Produto</a></li>
+        <li><a href="#" class="link">Serviço</a></li>
+        <li><a href="#" class="link">Contato</a></li>
+     </ul>
 </body>
 </html>
